# rust-mongodb

./: .dockerignore  .gitignore  Dockerfile  README.md  app.js  docker-compose.yml  index.js  package.json  requirements.txt  test.js
club-rust/: Cargo.toml
club-rust/src/: db_connection.rs  main.rs
engine/: main.py
engine/roberta-base-ca-predictions/: ancora-ca-ner_predictions.txt  catalanqa_predictions.json  pos_predictions.txt  sts-ca_predictions.txt  teca_predictions.txt  tecla_predictions.txt  xquad-ca_predictions.json
engine/test_data/ancora-ca-ner/: ancora-ca-ner.py  test.conll
engine/test_data/catalanqa/: catalanqa.py  test.json
engine/test_data/pos/: universal-dependencies-ca.py
engine/test_data/sts-ca/: sts-ca.py  test.tsv
engine/test_data/teca/: teca.py  test.json
engine/test_data/tecla/: tecla.py
engine/test_data/vilaquad/: test.json  vilaquad.py
engine/test_data/viquiquad/: viquiquad.py
engine/test_data/xquad-ca/: test.json  xquad-ca.py
model/: Evaluation.js
mongodb-test/: Cargo.toml
mongodb-test/src/: main.rs
routes/: api.js
